<resources>
    <string name="app_name" translatable="false">Capricorn</string>
    <string name="Perm_Calls_Rationale">auf das Telefonprotokoll um Telefonanrufe auswerten zu können.</string>
    <string name="Perm_Calls_Granted">Zugriff auf Telefonprotokoll wurde gewährt</string>
    <string name="Perm_Calls_Denied">Zugriff auf Telefonprotokoll wurde NICHT gewährt. Anrufe können durch Capricorn nicht ausgewertet werden</string>
    <string name="Perm_SMS_Rationale">auf die Anzahl der gesendeten SMS, um bei entsprechenden Verträgen die SMS und die Anrufe zu addieren.</string>
    <string name="Perm_SMS_Granted">Zugriff auf SMS wurde gewährt</string>
    <string name="Perm_SMS_Denied">Zugriff auf SMS wurde NICHT gewährt. SMS können durch Capricorn nicht ausgewertet werden</string>
    <string name="pref_Title_Settings">Capricorn Einstellungen</string>
    <string name="pref_CurVal_Std_Key" translatable="false">pref_CurVal_Std_Key</string>
    <string name="pref_settings_header">Passen Sie Capricorn an Ihre Bedürfnisse an</string>
    <string name="pref_Intervall_Key" translatable="false">pref_Intervall_Key</string>
    <string name="pref_Intervall_Title">Aktualisierungs Intervall [sec]</string>
    <string name="pref_Intervall_Sum">Eingestelltes Aktualisierungsintervall: </string>
    <string name="pref_Intervall_Default" translatable="false">3000</string>
    <string name="pref_Intervall_Unit"> sec</string>
    <string name="pref_TextSize_Key" translatable="false">pref_TextSize_Key</string>
    <string name="pref_TextSize_Title">Textgröße Widget [Punkte]</string>
    <string name="pref_TextSize_Default" translatable="false">12</string>
    <string name="pref_TextSize_Unit">Punkte</string>
    <string name="pref_TextSize_Sum">Eingestellte Textgröße im Widget:</string>
    <string name="pref_TextSizeApp_Key" translatable="false">pref_TextSizeApp_Key</string>
    <string name="pref_TextSizeApp_Title">Textgröße App [Punkte]</string>
    <string name="pref_TextSizeApp_Default" translatable="false">12</string>
    <string name="pref_TextSizeApp_Unit">Punkte</string>
    <string name="pref_TextSizeApp_Sum">Eingestellte Textgröße der App:</string>
    <string name="pref_Background_Key" translatable="false">pref_Background_2_Key</string>
    <string name="pref_Background_Title">Widget Hintergrund</string>
    <string name="pref_Background_Default" translatable="false">0</string>
    <string name="pref_Background_Sum">Eingestellter Hintergrund:</string>
    <string name="pref_WdgtFontcolor_Key" translatable="false">pref_Fontcolor_Key</string>
    <string name="pref_WdgtFontcolor_Title">Widget Schriftfarbe</string>
    <string name="pref_WdgtFontcolor_Default" translatable="false">0</string>
    <string name="pref_WdgtFontcolor_Sum">Eingestellte Widget Schriftfarbe:</string>
    <string name="pref_CostRelevantData_Title">Kosten relevante Daten</string>
    <string name="pref_CostRelevantData_Key">pref_CostRelevantData_Key</string>
    <string name="pref_Cur_Bill_Period_Title">Aktueller Abrechnungszeitraum</string>
    <string name="pref_Cur_Bill_Period_Title1">Wechseldatum:</string>
    <string name="pref_Cur_Bill_Period_Title2">noch</string>
    <string name="pref_Cur_Bill_Period_Title3">Tage</string>
    <string name="pref_Cur_Bill_Period_Title4">Zykluslänge:</string>
    <string name="pref_Cur_Bill_Period_Title5">monatlich</string>
    <string name="pref_MobileScreen_Key" translatable="false">pref_MobileScreen_Key</string>
    <string name="pref_MobileScreen_Title">Mobile Daten</string>
    <string name="pref_MobileOptions_Key" translatable="false">pref_MobileOptions_Key</string>
    <string name="pref_MobileOptions_Title">Datenberechnung</string>
    <string name="pref_MobileOptions_Sum">Ausgewählt ist: </string>
    <string name="pref_MobileOptions_Default" translatable="false">1</string>
    <string name="pref_NuPiCycle_Key" translatable="false">pref_NuPiCycle_Key</string>
    <string name="pref_NuPiRef_Wlan_Key" translatable="false">pref_NuPiRef_Wlan_Key</string>
    <string name="pref_NuPiRef_Mob_Key" translatable="false">pref_NuPiRef_Mob_Key</string>
    <string name="pref_NuPiMax_Mob_Key" translatable="false">pref_NuPiMax_Mob_Key</string>
    <string name="pref_NuPiRef_Calls_Key" translatable="false">pref_NuPiRef_Calls_Key</string>
    <string name="pref_NuPiMax_Calls_Key" translatable="false">pref_NuPiMax_Calls_Key</string>
    <string name="pref_NuPi_BckgrdTransp_Key" translatable="false">pref_NuPi_BckgrdTransp_Key</string>
    <string name="pref_MobileMessung_Key" translatable="false">pref_MobileOffset_Key</string>
    <string name="pref_MobileRefVal_Title">Verbrauchte mobile Daten</string>
    <string name="pref_MobileRefVal_Explanation">Bitte geben Sie die für den Abrechnungszeitraum bereits verbrauchten Daten in MByte ein z.B. den Wert aus der App. Einstellungen oder den tatsächlichen Wert von Ihrem Dienstanbieter.</string>
    <string name="pref_MobileRefVal_Sum">Verbrauchte mobile Daten: </string>
    <string name="pref_MobileRefVal_Default" translatable="false">0</string>
    <string name="pref_MobileRefVal_Unit">MByte</string>
    <string name="pref_MobileCycle_Cat_Title">Zyklus Optionen</string>
    <string name="pref_MobileCycle_Cat_Key" translatable="false">pref_MobileCycle_Cat_Key</string>
    <string name="pref_MobileCycle_Key" translatable="false">pref_MobileCycle_Key</string>
    <string name="pref_MobileCycle_Title">Zyklus für mobile Daten und Anrufe</string>
    <string name="pref_MobileCycle_Sum1">Nächster Reset des Datenverbrauchszyklus am: </string>
    <string name="pref_MobileCycleOption_Key" translatable="false">pref_MobileCycleOption_Key</string>
    <string name="pref_MobileCycleOption_Title">Zeitraster</string>
    <string name="pref_MobileCycleOption_Default" translatable="false">0</string>
    <string name="pref_MobileCycleOption_Sum">Zeitraster eingestellt auf: </string>
    <string name="pref_MobileMonitoring_Key" translatable="false">pref_MobileMonitoring_Key</string>
    <string name="pref_MobileMonitoring_Title">Monitoring mobile Daten</string>
    <string name="pref_Monitoring_SumOn">ist aktiviert</string>
    <string name="pref_Monitoring_SumOff">ist deaktiviert</string>
    <string name="pref_MobileView_Key" translatable="false">pref_MobileView_Key</string>
    <string name="pref_MobileView_Title">Datenanzeige</string>
    <string name="pref_MobileView_SumOn">noch übrige Daten</string>
    <string name="pref_MobileView_SumOff">verbrauchte Daten</string>
    <string name="pref_MobileMaxVal">High speed Limit für mobile Daten</string>
    <string name="pref_MobileMaxVal_Sum">Das High speed Limit für mobile Daten ist: </string>
    <string name="pref_General_Cat_Title">Allgemein</string>
    <string name="pref_View_Cat_Title">Widget Anzeigepositionen</string>
    <string name="pref_View_Scr_Title">Position 1 bis 7 (von links nach rechts)</string>
    <string name="pref_View1_Key" translatable="false">pref_View1_Key</string>
    <string name="pref_View1_Title">Position 1 (links)</string>
    <string name="pref_View1_Default" translatable="false">6</string>
    <string name="pref_View1_Sum">Angezeigte Resource 1:</string>
    <string name="pref_View2_Key" translatable="false">pref_View2_Key</string>
    <string name="pref_View2_Title">Position 2</string>
    <string name="pref_View2_Default" translatable="false">5</string>
    <string name="pref_View2_Sum">Angezeigte Resource 2:</string>
    <string name="pref_View3_Key" translatable="false">pref_View3_Key</string>
    <string name="pref_View3_Title">Position 3</string>
    <string name="pref_View3_Default" translatable="false">2</string>
    <string name="pref_View3_Sum">Angezeigte Resource 3:</string>
    <string name="pref_View4_Key" translatable="false">pref_View4_Key</string>
    <string name="pref_View4_Title">Position 4</string>
    <string name="pref_View4_Default" translatable="false">1</string>
    <string name="pref_View4_Sum">Angezeigte Resource 4:</string>
    <string name="pref_View5_Key" translatable="false">pref_View5_Key</string>
    <string name="pref_View5_Title">Position 5</string>
    <string name="pref_View5_Default" translatable="false">3</string>
    <string name="pref_View5_Sum">Angezeigte Resource 5:</string>
    <string name="pref_View6_Key" translatable="false">pref_View6_Key</string>
    <string name="pref_View6_Title">Position 6</string>
    <string name="pref_View6_Default" translatable="false">7</string>
    <string name="pref_View6_Sum">Angezeigte Resource 6:</string>
    <string name="pref_View7_Key" translatable="false">pref_View7_Key</string>
    <string name="pref_View7_Title">Position 7 (großes Widget rechts)</string>
    <string name="pref_View7_Default" translatable="false">4</string>
    <string name="pref_View7_Sum">Angezeigte Resource 7:</string>
    <string name="pref_Language_Key" translatable="false">pref_Language_Key</string>
    <string name="pref_Language_Title">Sprache</string>
    <string name="pref_Language_Default">Deutsch</string>
    <string name="pref_Language_Sum">Die App unterstützt Deutsch und Englisch. Ändern der Sprache über die Android Einstellungen. Gerät ist aktuell eingestellt auf:</string>
    <string name="pref_BckgrdTransp_Title">Widget Transparenz</string>
    <string name="pref_BckgrdTransp_Sum">Widget Transparenz:</string>
    <string name="DefaultText">tbd</string>
    <string name="pref_CurVal_Title_Standard">Standardwerte</string>
    <string name="pref_CurVal_MobileMeasured_Key" translatable="false">pref_CurVal_MobileMeasured_Key</string>
    <string name="pref_CurVal_MobileMeanPerDay_Key" translatable="false">pref_CurVal_MobileMeanPerDay_Key</string>
    <string name="pref_CurVal_MobileTotal_Key" translatable="false">pref_CurVal_MobileTotal_Key</string>
    <string name="pref_CurVal_SDK_Key" translatable="false">pref_CurVal_SDK_Key</string>
    <string name="pref_CurVal_FingerPrint_Key" translatable="false">pref_CurVal_FingerPrint_Key</string>
    <string name="pref_CurVal_Title_DeviceInfo">Geräte Information</string>
    <string name="pref_CurVal_Title_SDK">SDK</string>
    <string name="pref_CurVal_FingerPrint">Geräte Fingerabdruck:</string>
    <string name="pref_CurVal_MobileDataInfo1">Mobile Daten</string>
    <string name="pref_CurVal_MobileDataInfo2">gemessen seit letztem Geräte Neustart:</string>
    <string name="pref_CurVal_MobileDataInfo3">Durchschnitt verbraucht:</string>
    <string name="pref_CurVal_MobileDataInfo4">Gesamtwert vebraucht:</string>
    <string name="pref_CurVal_WLANMeasured_Key" translatable="false">pref_CurVal_WLANMeasured_Key</string>
    <string name="pref_CurVal_WLANDisplay_Key" translatable="false">pref_CurVal_WLANDisplay_Key</string>
    <string name="pref_CurVal_WLANDataInfo1">WLAN Daten</string>
    <string name="pref_CurVal_WLANDataInfo2">gemessen seit letztem Geräte Neustart:</string>
    <string name="pref_CurVal_WLANDataInfo3">Anzeigewert:</string>
    <string name="pref_CurVal_CallDataInfo1">Anrufe</string>
    <string name="pref_CurVal_CallDataInfo2">Ausgehende Anrufe:</string>
    <string name="pref_CurVal_CallDataInfo3">Eingehende Anrufe:</string>
    <string name="pref_CurVal_CallDataInfo4">Verpasste Anrufe:</string>
    <string name="pref_CurVal_Call_Incoming_Key" translatable="false">pref_CurVal_Call_Incoming_Key</string>
    <string name="pref_CurVal_Call_Outgoing_Key" translatable="false">pref_CurVal_Call_Outgoing_Key</string>
    <string name="pref_CurVal_Call_Missed_Key" translatable="false">pref_CurVal_Call_Missed_Key</string>
    <string name="cpc_nd">nicht definiert</string>
    <string name="btn_capt_Std">Standard</string>
    <string name="btn_capt_Mob">Daten</string>
    <string name="btn_capt_Wifi">WLAN</string>
    <string name="btn_capt_Netwrk">Netzwerk</string>
    <string name="btn_capt_Update">Aktualisieren</string>
</resources>